--- a/.gitignore
+++ b/.gitignore
@@ -125,7 +125,11 @@ dmypy.json
 .pyre/
 
 # Ignore data and saved models
-dataset/
+#dataset/
+*_0.png
+*_1.png
+*_2.png
+*_3.png
 saved_model_paths/
 images/
 
