--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,28 @@
 absl-py==0.12.0
+astunparse==1.6.3
 beautifulsoup4==4.9.3
 bs4==0.0.1
 cachetools==4.2.2
 certifi==2020.12.5
 chardet==4.0.0
 cycler==0.10.0
+flatbuffers==1.12
+gast==0.4.0
 google-auth==1.30.0
 google-auth-oauthlib==0.4.4
-grpcio==1.38.0
+google-pasta==0.2.0
+grpcio==1.34.1
+h5py==3.1.0
 idna==2.10
+keras-nightly==2.5.0.dev2021032900
+Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
 Markdown==3.3.4
 matplotlib==3.4.2
-numpy==1.20.3
+numpy==1.19.5
 oauthlib==3.1.0
 opencv-python==4.5.2.52
+opt-einsum==3.3.0
 Pillow==8.2.0
 protobuf==3.17.0
 pyasn1==0.4.8
@@ -26,15 +34,19 @@ requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
 selenium==3.141.0
-six==1.16.0
+six==1.15.0
 soupsieve==2.2.1
 tensorboard==2.5.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
+tensorflow==2.5.0
+tensorflow-estimator==2.5.0
+termcolor==1.1.0
 torch==1.8.1+cu111
 torchaudio==0.8.1
 torchvision==0.9.1+cu111
 tqdm==4.60.0
-typing-extensions==3.10.0.0
+typing-extensions==3.7.4.3
 urllib3==1.26.4
 Werkzeug==2.0.1
+wrapt==1.12.1
